--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <link rel="shortcut icon" href="https://i.ibb.co/hHhsnB1/favicon-32x32.png" type="image/x-icon">
+  <link rel="shortcut icon" href="https://res.cloudinary.com/doaijv8m0/image/upload/v1659231591/02-06/OIP_1_e2fawf.jpg" type="image/x-icon">
   <title>Frontend Mentor | Launch countdown timer</title>
 </head>
 
